; if you modify this file, add 'test' to the 'skip' field in drom.toml

(library
 (name lib_expect_tests)
 (preprocess
  (pps ppx_expect))
 (inline_tests
  (modes best)) ; add js for testing with nodejs
 (libraries ocp_cmtdeps_lib ez_toposort ez_debug ez_file ez_dot) ; add your project libraries here
 )
